# speaker_tool

./: DEVELOPMENT_PLAN.md  INSTALL.md  LICENSE  NordBass_Driver_Library.csv  README.md  commands.txt  install_desktop.sh  nordbass_launcher.sh  pyproject.toml
nordbass/: project_state.py
nordbass/cli/: app.py  wizard.py
nordbass/core/: __init__.py  flares.py  geometry.py  models.py  ports.py  ts_box.py  units.py
nordbass/data/: __init__.py  database.py  importer.py  project_file.py
nordbass/gui/: collapsible.py  main_window.py  project_state.py  scale.py  theme.py
nordbass/gui/tabs/: driver_tab.py  flare_tab.py  geometry_tab.py  simulation_tab.py
nordbass_speaker_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
projects/: test.nordproj
tests/: conftest.py  test_flares.py  test_geometry.py  test_ports.py  test_ts_box.py  test_units.py
