[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nordbass-speaker-tool"
version = "0.1.14"
description = "Professional loudspeaker enclosure design tool (WinISD/Boxnotes/Flare-it clone)"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "typer[all]>=0.9",
    "rich>=13.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "PySide6>=6.5",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
nordbass = "nordbass.cli.app:app"
nordbass-gui = "nordbass.gui.main_window:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nordbass*"]
